# lib-ruby-parser

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  nodes.yaml  rustfmt.toml  tag-from-cargo-toml.sh
.github/: dependabot.yml
.github/workflows/: build.yml  codegen.yml  coverage.yml  post-release.yml  release-codegen.yml  release.yml  test-c.yml  test-external.yml  test-rust.yml  test.yml
bench/: compare.sh  run-lib-ruby-parser.sh  run-ripper.rb
codegen/: fns.rs  mod.rs
codegen/c/: bindings_h.rs  bindings_messages_c.rs  bindings_messages_h.rs  bindings_nodes_c.rs  bindings_nodes_h.rs  (+10 more)
examples/: Cargo.toml  check_escaping.rs  codegen.rs  compare_with_mri.rs  compare_with_ripper.rs  lex_ripper.rb  parse.rs  prepare_token_ids.rs  tokenize.rs
examples/examples/: compare_with_ripper.rs  parse.rs  tokenize.rs
examples/helpers/: benchmark.rs  benchmarking.rs  build_info.rs  debug_level.rs  debug_level_from_string.rs  each_async_ruby_file.rs  each_ruby_file.rs  input_files.rs  lex.rs  lex_as_ripper.rs  mod.rs  parse.rs  print_all_locs.rs  printer.rs  profile.rs  profiler.rs  profiling.rs  ripper_lex.rb  ripper_lex.rs  timer.rs  token_list.rs  tokenize.rs
examples/real/: compare_with_mri.rs  mod.rs  parse.rs  tokenize.rs
examples/real/helpers/: build_info.rs  debug_level.rs  input_files.rs  mod.rs  parse.rs  printer.rs  profiler.rs  timer.rs  token_list.rs  tokenize.rs
examples/src/: benchmarking.rs  debug_level_from_string.rs  each_async_ruby_file.rs  each_ruby_file.rs  lex.rs  lex_as_ripper.rs  lib.rs  parse.rs  profiling.rs  ripper_lex.rb  ripper_lex.rs  tokenize.rs
examples/src/helpers/: build_info.rs  mod.rs  parse.rs  printer.rs  profiler.rs
fuzz/: Cargo.toml
fuzzer/: Cargo.toml
gems/: download.rb
lib-ruby-parser/: Cargo.toml  README.md  build.rs
lib-ruby-parser/codegen/rust/: mod.rs  reserved_words.rs
lib-ruby-parser/codegen/y/: mod.rs
lib-ruby-parser/src/: builder.rs  bytes.rs  context.rs  lib.rs  parse_value.rs  static_environment.rs
lib-ruby-parser/src/error/messages/: message_enum.rs  mod.rs  render.rs
lib-ruby-parser/src/lexer/: mod.rs
lib-ruby-parser/src/lexer/tests/: fixture.rs
lib-ruby-parser/src/nodes/: node.rs  node_enum.rs
lib-ruby-parser/src/nodes/types/: alias.rs  and.rs  and_asgn.rs  arg.rs  args.rs  array.rs  array_pattern.rs  array_pattern_with_tail.rs  back_ref.rs  begin.rs  block.rs  block_pass.rs  blockarg.rs  break_.rs  c_send.rs  case.rs  case_match.rs  casgn.rs  cbase.rs  class.rs  complex.rs  const_.rs  const_pattern.rs  cvar.rs  cvasgn.rs  def.rs  defined.rs  defs.rs  dstr.rs  dsym.rs  e_flip_flop.rs  empty_else.rs  encoding.rs  ensure.rs  erange.rs  false_.rs  file.rs  find_pattern.rs  float.rs  for_.rs  (+85 more)
lib-ruby-parser/src/parser/: mod.rs  parse.rs  parse.y
lib-ruby-parser/src/reserved_words/: list.rs
lib-ruby-parser/src/source/: buffer.rs
lib-ruby-parser/src/test_helpers/: diagnostic_matcher.rs
lib-ruby-parser/src/traverse/finder/: finder_gen.rs  mod.rs
lib-ruby-parser/src/traverse/finder/pattern/: item.rs
lib-ruby-parser/src/traverse/visitor/: mod.rs  visit_gen.rs
scripts/: Cargo.toml  bench.rb  bench.sh  bump_version.rb  fuzz.sh  parse.sh  test-all.sh  test-c.sh  test-cpp.sh
scripts/src/helpers/: profiler.rs
src/: builder.rs  bytes.rs  c_parse.rs  context.rs  current_arg_stack.rs  debug_level.rs  lex_char.rs  lex_state.rs  lib.rs  loc.rs  loc_ext.rs  map_builder.rs  max_numparam_stack.rs  maybe_byte.rs  messages.rs  meta.rs  node.rs  parse_value.rs  parser.lalrpop  parser.y  parser_options.rs  parser_result.rs  parser_test.rs  reserved_words.rs  sorbet_token_rewriter.rs  stack_state.rs  static_environment.rs  str_term.rs  string_value.rs  token.rs  token_buf.rs  token_rewriter.rs  variables_stack.rs
tests/: Cargo.toml  assert_scanned.rs  build.rs  diagnostic_matcher.rs  error_test.rs  files_under_dir.rs  find_test.rs  finder_test.rs  lexer_test.rs  loc.rs  loc_matcher.rs  messages_test.rs  mod.rs  parser_test.rs  source_buffer_test.rs  static_environment_test.rs  tests.rs
tests/codegen/: loc_name.liquid
tests/fixtures/invalid/: incorrect_encoding_comment.rb  no_encoding_comment_not_utf8.rb
tests/fixtures/lexer/manual/: test_bug_expr_end_colon_0  test_label_colon2_22_0  test_string_pct_null_0  test_string_single_0  test_string_single_escape_chars_0
tests/fixtures/parser/manual/: ambiguous_ternary_operator  case_with_multipl_whens_and_else  casematch_with_multiple_ins_and_else  control_meta_chars_in_regexes  invalid_escape_char_syntax_c  invalid_escape_char_syntax_c_m  invalid_escape_char_syntax_m_c  invalid_hex  invalid_unicode_codepoint  invalid_unicode_escape  multiple_char_codepoints  multiple_string_codepoints  numeric_literal_without_digits_binary  numeric_literal_without_digits_decimal  numeric_literal_without_digits_hex  numeric_literal_without_digits_octal  test_assignment_to_numparams_1  test_erange_without_parentheses_at_eol_0  test_kwarg_combinations_0  test_kwarg_combinations_1  test_lvar_injecting_match_0  test_marg_combinations_0  test_marg_combinations_1  test_marg_combinations_2  test_marg_combinations_3  test_marg_combinations_4  test_marg_combinations_5  test_marg_combinations_6  test_marg_combinations_7  test_marg_combinations_8  test_marg_combinations_9  test_private_endless_method_command_syntax_4  test_range_endless_1  test_regex_error_0  test_regex_error_1  test_regexp_encoding_0  unterminated_string_after_percent_at_eof  unterminated_unicode_escape
tests/fixtures/sorbet/: error_recovery_assign  error_recovery_const_case  error_recovery_constant_only_scope  error_recovery_missing_fun  error_recovery_multiple_stmts  method_name_alias
tests/lexer/: assert_scanned.rs  lexer_test.rs  mod.rs
tests/loc_matcher/: loc_matcher.rs  loc_name.rs  mod.rs
tests/source/: buffer_test.rs  mod.rs
tests/source/fixtures/valid/: utf_8.rb
tests/src/lexer/: fixture.rs  gen.rs  manual.rs
tests/src/parser/: gen.rs  manual.rs
tests/src/test_helpers/loc_matcher/: loc_name_gen.rs  matcher.rs
tests/static_environment/: mod.rs
(+443 files in other folders)
