[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
description = "Ruby parser"
edition = "2021"
include = [
    "/codegen/**/*.rs",
    "/src/**/*.rs",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
]
license = "MIT"
name = "lib-ruby-parser"
repository = "https://github.com/lib-ruby-parser/lib-ruby-parser"
version = "4.0.5+ruby-3.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

development = ["codegen-y", "codegen-rust"]

# Codegen parse.y
codegen-y = ["rust-bison-skeleton"]

# Codegen Rust files
codegen-rust = []

# Enables debug output in all structs
debug-all = ["debug-buffer", "debug-lexer", "debug-parser"]

# Enables debug output from the `Buffer`
debug-buffer = []

# Enables debug output from the `Lexer`
debug-lexer = []

# Enables debug output from the `Parser`
debug-parser = []

# Everything required for `cargo run --bin parse`
bin-parse = ["lexopt", "pprof", "glob"]

[dependencies]
alloc-from-pool = { version = "1.0.5" }
onig = { version = "6", optional = true }
lib-ruby-parser-ast = { version = "0.55.0" }

# Used for src/bin/*.rs executables
lexopt = { optional = true, version = "0.3.0" }
glob = { optional = true, version = "0.3" }
[target.'cfg(not(windows))'.dependencies]
jemallocator = { optional = true, version = "0.5" }
pprof = { optional = true, version = "0.12", features = ["flamegraph"] }

[build-dependencies]
rust-bison-skeleton = { version = "0.41.0", optional = true }

[profile.dev]
debug-assertions = false

[profile.release]
lto = true

[profile.test]
debug-assertions = true

[[bin]]
bench = false
name = "parse"
required-features = ["bin-parse"]
test = false

[[bin]]
bench = false
name = "dump_token_ids"
required-features = []
test = false
