[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"
license = "MIT"
name = "lib-ruby-parser-helpers"
publish = false
version = "0.0.0"

[dependencies]
clap = "3.0.0-beta.2"
glob = "0.3.0"
jemallocator = "0.3.2"
lib-ruby-parser = {path = ".."}
pprof = {version = "0.4.2", features = ["flamegraph"]}

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[features]
c-structures = ["lib-ruby-parser/c-structures"]
onig = ["lib-ruby-parser/onig"]
rebuild-grammar = ["lib-ruby-parser/rebuild-grammar"]
