[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
description = "Examples for lib-ruby-parser"
edition = "2021"
license = "MIT"
name = "examples"
repository = "https://github.com/lib-ruby-parser/lib-ruby-parser"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
lib-ruby-parser = {path = "../lib-ruby-parser"}
