[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
description = "Ruby parser"
edition = "2021"
include = ["/codegen/**/*.rs", "/src/**/*.rs", "/build.rs", "/Cargo.toml", "/README.md"]
license = "MIT"
name = "lib-ruby-parser"
repository = "https://github.com/lib-ruby-parser/lib-ruby-parser"
version = "4.0.4+ruby-3.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# Codegen parse.y
codegen-y = ["rust-bison-skeleton"]

# Codegen Rust files
codegen-rust = ["lib-ruby-parser-nodes"]

# Enables debug output in all structs
debug-all = ["debug-buffer", "debug-lexer", "debug-parser"]

# Enables debug output from the `Buffer`
debug-buffer = []

# Enables debug output from the `Lexer`
debug-lexer = []

# Enables debug output from the `Parser`
debug-parser = []

[dependencies]
alloc-from-pool = {version = "1.0.3"}
onig = {version = "6", optional = true}

[build-dependencies]
lib-ruby-parser-nodes = {version = "0.53.0", optional = true}
rust-bison-skeleton = {version = "0.41.0", optional = true}

[profile.dev]
debug-assertions = false

[profile.release]
lto = true

[profile.test]
debug-assertions = true
