[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
description = "Scripts for lib-ruby-parser"
edition = "2021"
license = "MIT"
name = "scripts"
repository = "https://github.com/lib-ruby-parser/lib-ruby-parser"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# Enables codegen bin
codegen = []

[dependencies]
lib-ruby-parser = {path = "../lib-ruby-parser"}

cbindgen = "0.24.2"
clap = {version = "4.0.8", features = ["derive"]}
glob = "0.3.0"
lib-ruby-parser-nodes = "0.55.0"
serde = {version = "1.0", features = ["derive"]}

[target.'cfg(not(windows))'.dependencies]
jemallocator = {version = "0.5.0", optional = true}
pprof = {version = "0.11.0", features = ["flamegraph"]}

[[bin]]
bench = false
name = "parse"
test = false

[[bin]]
bench = false
name = "tokenize"
test = false

[[bin]]
bench = false
name = "compare_with_mri"
test = false

[[bin]]
bench = false
name = "prepare_token_ids"
test = false

[[bin]]
bench = false
name = "codegen"
required-features = ["codegen"]
test = false
