[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
description = "Tests for lib-ruby-parser"
edition = "2021"
license = "MIT"
name = "tests"
repository = "https://github.com/lib-ruby-parser/lib-ruby-parser"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
alloc-from-pool = {version = "1.0.3"}
lib-ruby-parser = {path = "../lib-ruby-parser"}

[build-dependencies]
lib-ruby-parser-nodes = "0.53.0"
